--- a/Итог/EDT_итог/src/Documents/Продажи/Forms/DocumentForm/Form.form
+++ b/Итог/EDT_итог/src/Documents/Продажи/Forms/DocumentForm/Form.form
@@ -229,6 +229,10 @@
           <segments>Object.Товары.Количество</segments>
         </paths>
       </dataPath>
+      <handlers>
+        <event>OnChange</event>
+        <name>ТоварыКоличествоOnChange</name>
+      </handlers>
       <extendedTooltip>
         <name>ТоварыКоличествоExtendedTooltip</name>
         <id>28</id>
@@ -281,6 +285,10 @@
           <segments>Object.Товары.Цена</segments>
         </paths>
       </dataPath>
+      <handlers>
+        <event>OnChange</event>
+        <name>ТоварыЦенаOnChange</name>
+      </handlers>
       <extendedTooltip>
         <name>ТоварыЦенаExtendedTooltip</name>
         <id>31</id>
@@ -333,6 +341,10 @@
           <segments>Object.Товары.Сумма</segments>
         </paths>
       </dataPath>
+      <handlers>
+        <event>OnChange</event>
+        <name>ТоварыСуммаOnChange</name>
+      </handlers>
       <extendedTooltip>
         <name>ТоварыСуммаExtendedTooltip</name>
         <id>34</id>
